[package]
name = "hyper_agoda"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }

